--- a/project1.html
+++ b/project1.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The-Gang</title>
 </head>
 <body>
@@ -23,6 +22,7 @@
         </div>
         <div class="character1"></div>
         <div class="character2"></div>
+        <div class="character4"></div>
         <div class="character3"></div>
     </div>
     <nav>
