add style to nb-list ( did not finish yet)

--- a/project1.html
+++ b/project1.html
@@ -34,7 +34,6 @@
             <li><a href="#more-info">More Info</a></li>
         </ul>
     </nav>
-    
     <div class="more-info">
         <div class = "wrapper">
             <h2>Join Our Fan Club</h2>
@@ -51,16 +50,17 @@
 
     </div>
     <div class="story" >
-        <ul class="nb-list">
-            <li class = "blue">Rock 'n Roll</li>
-            <li class = "gray">&nbsp;</li>
-            <li class = "yellow dragging">Laughter</li>
-            <li class = "red">Square Offs</li>
-            <li class = "pink">Circuitous Routes</li>
-            <li class = "salmon">Trigonometry</li>
-            <li class = "blue">Rad Hats</li>
-            <li class="yellow">Being Silly</li>
-        </ul>
+        <div class = "wrapper">
+            <ul class="nb-list">
+                <li class = "blue">Rock 'n Roll</li>
+                <li class = "gray">&nbsp;</li>
+                <li class = "yellow dragging">Laughter</li>
+                <li class = "red">Square Offs</li>
+                <li class = "pink">Circuitous Routes</li>
+                <li class = "salmon">Trigonometry</li>
+                <li class = "blue">Rad Hats</li>
+                <li class="yellow">Being Silly</li>
+            </ul>
         <h3 id = "story">
             Left: Things We Find Important <br>
             Below: Our Story
@@ -77,6 +77,7 @@
         <p> 
             They even started making fun of squares and rectangles in what they like to call ‘Square Offs’!
         </p>
+        </div>
     </div>
     <div class="sep">
 
